--- a/Indexer/Indexer/Indexer.csproj
+++ b/Indexer/Indexer/Indexer.csproj
@@ -42,6 +42,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MyIndexerStruct.cs" />
+    <Compile Include="MyIndexerClass.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
