Models added, Document model added

--- a/FluentAPI/Models/FluentAPI.Models.csproj
+++ b/FluentAPI/Models/FluentAPI.Models.csproj
@@ -4,16 +4,16 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{06312058-8337-4CBA-89E5-6EFA8F3D96FC}</ProjectGuid>
-    <OutputType>Exe</OutputType>
-    <RootNamespace>FluentAPI</RootNamespace>
-    <AssemblyName>FluentAPI</AssemblyName>
+    <ProjectGuid>{92D33EBA-06C5-4047-9473-9948109FD714}</ProjectGuid>
+    <OutputType>Library</OutputType>
+    <AppDesignerFolder>Properties</AppDesignerFolder>
+    <RootNamespace>Models</RootNamespace>
+    <AssemblyName>Models</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,7 +23,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -42,22 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Fluent\Documents.cs" />
-    <Compile Include="Fluent\ForAssociation\ForAssocciation.cs" />
-    <Compile Include="Fluent\ForAssociation\IForAssociation.cs" />
-    <Compile Include="Fluent\ForProfile\ForProfile.cs" />
-    <Compile Include="Fluent\ForProfile\IForProfile.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="Document.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Models\FluentAPI.Models.csproj">
-      <Project>{92d33eba-06c5-4047-9473-9948109fd714}</Project>
-      <Name>FluentAPI.Models</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
