--- a/FluentAPI/FluentAPI/FluentAPI.csproj
+++ b/FluentAPI/FluentAPI/FluentAPI.csproj
@@ -59,6 +59,9 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+    <None Include="TestDb.db">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\FluentAPI.Models\FluentAPI.Models.csproj">
