--- a/FluentAPI/FluentAPI.Models/FluentAPI.Models.csproj
+++ b/FluentAPI/FluentAPI.Models/FluentAPI.Models.csproj
@@ -53,12 +53,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DB.cs" />
+    <Compile Include="DB\IDB.cs" />
+    <Compile Include="DB\SQLite.cs" />
     <Compile Include="Models\Document.cs" />
+    <Compile Include="Models\IRecord.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Models\Readme.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.109.2\build\net46\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.109.2\build\net46\System.Data.SQLite.Core.targets')" />
