--- a/FluentAPI/FluentAPI.Models/FluentAPI.Models.csproj
+++ b/FluentAPI/FluentAPI.Models/FluentAPI.Models.csproj
@@ -52,9 +52,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DB.cs" />
+    <Compile Include="DbOld.cs" />
     <Compile Include="DB\IDB.cs" />
-    <Compile Include="DB\SQLite.cs" />
+    <Compile Include="DB\SQLiteDB.cs" />
     <Compile Include="Models\Document.cs" />
     <Compile Include="Models\IRecord.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -64,6 +64,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="DB\Readme.txt" />
     <Content Include="Models\Readme.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
