--- a/FluentAPI/FluentAPI/App.config
+++ b/FluentAPI/FluentAPI/App.config
@@ -5,6 +5,6 @@
     </startup>
 
   <connectionStrings>
-    <add name="Default" connectionString="Data Source=./TestDb.db;Version=3;" providerName="System.Data.SqlClient" />
+    <add name="SQLite" connectionString="Data Source=./TestDb.db;Version=3;" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
