--- a/FluentAPI/FluentAPI/FluentAPI.csproj
+++ b/FluentAPI/FluentAPI/FluentAPI.csproj
@@ -48,11 +48,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Fluent\Documents.cs" />
-    <Compile Include="Fluent\ForAssociation\ForAssocciation.cs" />
-    <Compile Include="Fluent\ForAssociation\IForAssociation.cs" />
-    <Compile Include="Fluent\ForProfile\ForProfile.cs" />
-    <Compile Include="Fluent\ForProfile\IForProfile.cs" />
+    <Compile Include="API\Documents.cs" />
+    <Compile Include="API\ForAssociation\ForAssocciation.cs" />
+    <Compile Include="API\ForAssociation\IForAssociation.cs" />
+    <Compile Include="API\ForProfile\ForProfile.cs" />
+    <Compile Include="API\ForProfile\IForProfile.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -68,6 +68,9 @@
       <Project>{92d33eba-06c5-4047-9473-9948109fd714}</Project>
       <Name>FluentAPI.Models</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="API\Readme.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.109.2\build\net46\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.109.2\build\net46\System.Data.SQLite.Core.targets')" />
