Prepared remaining CRUD metods to be implemented in Documents and ForProfiles.
Started separation of Filter class from ForProfile to use it at any level.

--- a/FluentAPI/FluentAPI/FluentAPI.csproj
+++ b/FluentAPI/FluentAPI/FluentAPI.csproj
@@ -49,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="API\Documents.cs" />
+    <Compile Include="API\Filter\Filter.cs" />
     <Compile Include="API\ForAssociation\ForAssocciation.cs" />
     <Compile Include="API\ForAssociation\IForAssociation.cs" />
     <Compile Include="API\ForProfile\ForProfile.cs" />
