Filter class moved to FluentAPI.Modules.DB FilterRecords

--- a/FluentAPI/FluentAPI.Models/FluentAPI.Models.csproj
+++ b/FluentAPI/FluentAPI.Models/FluentAPI.Models.csproj
@@ -53,6 +53,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DbOld.cs" />
+    <Compile Include="DB\FilterRecords.cs" />
     <Compile Include="DB\IDB.cs" />
     <Compile Include="DB\SQLiteDB.cs" />
     <Compile Include="Models\Document.cs" />
