ABP Core tutorial done

--- a/Acme.SimpleTaskApp/src/Acme.SimpleTaskApp.Web/bundleconfig.json
+++ b/Acme.SimpleTaskApp/src/Acme.SimpleTaskApp.Web/bundleconfig.json
@@ -42,5 +42,11 @@
     "inputFiles": [
       "wwwroot/js/views/Tasks/index.js"
     ]
+  },
+  {
+    "outputFileName": "wwwroot/js/views/Tasks/create.min.js",
+    "inputFiles": [
+      "wwwroot/js/views/Tasks/create.js"
+    ]
   }
 ]
