--- a/Acme.SimpleTaskApp/src/Acme.SimpleTaskApp.Web/Acme.SimpleTaskApp.Web.csproj
+++ b/Acme.SimpleTaskApp/src/Acme.SimpleTaskApp.Web/Acme.SimpleTaskApp.Web.csproj
@@ -54,4 +54,9 @@
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.0.0" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Update="Views\Tasks\Create.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
+  </ItemGroup>
 </Project>
